--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
-    "teleparty-websocket-lib": "https://${GITHUB_TOKEN}@github.com/watchparty-org/teleparty-websocket-lib.git",
+    "teleparty-websocket-lib": "https://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@github.com/watchparty-org/teleparty-websocket-lib.git",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
